# lib-srgx-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: lib.rs
src/api_data/: errors.rs  mod.rs
src/legacy_api/: mod.rs  reply.rs  school_comments.rs  school_list.rs
tests/: integration_test.rs
